fix for #30, added X-Caller-Name (#44)
* JAVAMIG-4304 added X-Caller-Name, changed name of eventId to X-Event-ID according to common naming conventions

* fix for issue #30
